Refactor ImGui Vulkan init and update chImgui build
Updated ImGui Vulkan initialization to explicitly pass and set the ImGui context, and fixed argument indexing for DisplaySurface and SwapChain. Removed unreachable return statements in Vulkan buffer and prerequisites code. Changed chImgui from a shared to a static library and simplified compile definitions.

--- a/chImgui/CMakeLists.txt
+++ b/chImgui/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 
 file(GLOB IMGUI_SRC_FILES ${IMGUI_DIR}/*.cpp ${IMGUI_DIR}/*.h)
 
-add_library(chImgui SHARED
+add_library(chImgui STATIC
     ${IMGUI_SRC_FILES}
 )
 
@@ -42,6 +42,5 @@ target_compile_definitions(chImgui PRIVATE
   IMGUI_DISABLE_OBSOLETE_KEYIO
 )
 
-if (WIN32)
-  target_compile_definitions(chImgui PRIVATE IMGUI_BUILD_DLL)
-endif()
+target_compile_definitions(chImgui PRIVATE IMGUI_BUILD_DLL)
+
