--- a/chCodecs/chImageCodec/CMakeLists.txt
+++ b/chCodecs/chImageCodec/CMakeLists.txt
@@ -39,7 +39,7 @@ macro(INCLUDESUBFOLDERS curdir)
 endmacro()
 
 INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src)
-INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/externals)
+INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/Externals)
 INCLUDESUBFOLDERS(${CMAKE_SOURCE_DIR}/chUtilities/src)
 INCLUDESUBFOLDERS(${CMAKE_SOURCE_DIR}/chCore/src)
 
