--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,12 @@
 	path = chImgui/Externals/imgui
 	url = https://github.com/ocornut/imgui.git
   branch = docking
+[submodule "Externals/SDL3"]
+	path = Externals/SDL3
+	url = https://github.com/libsdl-org/SDL.git
+[submodule "chEditor/Externals/nativefiledialog-extended"]
+	path = chEditor/Externals/nativefiledialog-extended
+	url = https://github.com/btzy/nativefiledialog-extended.git
+[submodule "chCodecs/chMeshCodec/Externals/assimp"]
+	path = chCodecs/chMeshCodec/Externals/assimp
+	url = https://github.com/assimp/assimp.git
